[package]
name = "fleyg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4"
libp2p = { path = "../rust-libp2p/libp2p", version = "0.52.3", features = ["async-std", "autonat", "dns", "identify", "kad", "macros", "noise", "ping", "relay", "rsa", "tcp", "websocket", "yamux"] }
log = "0.4"
structopt = "0.3"
void = "1.0.2"
